# dicom-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  orthanc.json  pyproject.toml  requirements.txt
dicom_test/: config.py  image_processing.py  main.py  rotate.py  scp_storage.py  utils.py
