[tool.poetry]
name = "dicom-test"
version = "0.1.0"
description = ""
authors = ["Anthony Sazonov <jericho9378@gmail.com>"]
readme = "README.md"
packages = [{include = "dicom_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
